<resources>
    <string name="app_name">Projeto Pos: Calculadora</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">X</string>
    <string name="division">/</string>
    <string name="percent">%</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="clear">C</string>
    <string name="delete">DEL</string>
</resources>