<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/expression"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:ellipsize="start"
        android:gravity="end"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="40sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="end"
        android:maxLines="1"
        android:paddingEnd="10dp"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="30sp"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_clear"
            style="@style/Operators_Button"
            android:text="@string/clear" />

        <TextView
            android:id="@+id/btn_division"
            style="@style/Operators_Button"
            android:text="@string/division" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/btn_7"
            style="@style/Numbers_Button"
            android:text="@string/number_7" />
        <TextView
            android:id="@+id/btn_8"
            style="@style/Numbers_Button"
            android:text="@string/number_8" />
        <TextView
            android:id="@+id/btn_9"
            style="@style/Numbers_Button"
            android:text="@string/number_9" />
        <TextView
            android:id="@+id/btn_multiplication"
            style="@style/Operators_Button"
            android:text="@string/multiplication" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/btn_4"
            style="@style/Numbers_Button"
            android:text="@string/number_4" />
        <TextView
            android:id="@+id/btn_5"
            style="@style/Numbers_Button"
            android:text="@string/number_5" />
        <TextView
            android:id="@+id/btn_6"
            style="@style/Numbers_Button"
            android:text="@string/number_6" />
        <TextView
            android:id="@+id/btn_subtraction"
            style="@style/Operators_Button"
            android:text="@string/subtraction" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/btn_1"
            style="@style/Numbers_Button"
            android:text="@string/number_1" />
        <TextView
            android:id="@+id/btn_2"
            style="@style/Numbers_Button"
            android:text="@string/number_2" />
        <TextView
            android:id="@+id/btn_3"
            style="@style/Numbers_Button"
            android:text="@string/number_3" />
        <TextView
            android:id="@+id/btn_addition"
            style="@style/Operators_Button"
            android:text="@string/addition" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/btn_dot"
            style="@style/Numbers_Button"
            android:text="@string/dot" />
        <TextView
            android:id="@+id/btn_0"
            style="@style/Numbers_Button"
            android:text="@string/number_0" />
        <TextView
            android:id="@+id/btn_backspace"
            style="@style/Numbers_Button"
            android:text="@string/delete" />
        <TextView
            android:id="@+id/btn_equal"
            style="@style/Operators_Button"
            android:text="@string/equal" />
    </LinearLayout>

</LinearLayout>